fix mobile search bar dark mode

--- a/src/styles/searchMB.css
+++ b/src/styles/searchMB.css
@@ -1,11 +1,23 @@
 .search-bar_page {
   height: 100vh;
   width: 100%;
-  background-color: black;
+  background-color: white;
   position: absolute;
   top: 0px;
   left: 0px;
-  padding: 10px;
+  padding: 20px 30px 20px 30px;
+}
+
+#dark .search-bar_page {
+  background-color: #16161a;
+}
+
+.search-bar_page svg {
+  color: black !important;
+}
+
+#dark .search-bar_page svg {
+  color: white !important;
 }
 
 .search_mb {
